// service.proto
syntax = "proto3";
package echo;

service EchoService {
  // Unary RPC
  rpc Echo(EchoRequest) returns (EchoResponse);
  
  // Server streaming RPC
  rpc ServerStream(EchoRequest) returns (stream EchoResponse);
  
  // Client streaming RPC
  rpc ClientStream(stream EchoRequest) returns (EchoResponse);
  
  // Bidirectional streaming RPC (similar to WebSocket)
  rpc BidirectionalStream(stream EchoRequest) returns (stream EchoResponse);
}

message EchoRequest {
  string message = 1;
}

message EchoResponse {
  string message = 1;
  int64 timestamp = 2;
}

